Corrections to Home page & Banner html + css
Remade I'm Jen section, changed banner  html and styling to be positioned and avoid nav menu breaking, corrected button issues, removed unnecessary default padding and margin on certain elements, fixed special deals responsive layout issues

--- a/css/layout/homepage.scss
+++ b/css/layout/homepage.scss
@@ -1,16 +1,37 @@
-main {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
 .img-rounded {
   border-radius: 0.875rem;
-  aspect-ratio: 5/4;
-  object-fit: cover;
+}
+
+.im-jen {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: center;
+  margin: 4rem auto;
+
+  h3 {
+    color: $dark-red;
+  }
+
+  img {
+    aspect-ratio: 2 / 3;
+    object-fit: cover;
+  }
+
+  a {
+    width: 150px;
+    padding: 10px 16px;
+    display: block;
+  }
 }
 
 .home-specials {
-  margin: 3rem 0;
+  margin: 4rem auto;
+
+  img {
+    aspect-ratio: 5/4;
+    object-fit: cover;
+  }
 
   h3 {
     color: $dark-red;
@@ -55,11 +76,21 @@ main {
   justify-content: center;
 
   a {
+    display: block;
+    width: 150px;
     margin: 1rem auto 0 auto;
   }
 }
 
 @media (min-width: 768px) {
+  .im-jen {
+    align-items: center;
+
+    > div {
+      max-width: 48%;
+    }
+  }
+
   .home-specials {
     > a {
       margin-top: 3rem;
@@ -68,6 +99,7 @@ main {
 
   .layout-default,
   .layout-reversed {
+    max-width: unset;
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
